fix: ui responsive for admin

--- a/frontend/src/assets/img/gmaps/index9a11.html
+++ b/frontend/src/assets/img/gmaps/index9a11.html
@@ -36,7 +36,7 @@
 <tr><td data-sort="driverlogo10.png"><a href="driverlogo10.png"><img class="icon" src="../../../_autoindex/assets/icons/image.svg" alt="[IMG]">driverlogo10.png</a></td><td data-sort="1583146736">2020-03-02 10:58</td><td data-sort="8192">      8k</td></tr>
 <tr><td data-sort="driverlogo1.png"><a href="driverlogo1.png"><img class="icon" src="../../../_autoindex/assets/icons/image.svg" alt="[IMG]">driverlogo1.png</a></td><td data-sort="1583146736">2020-03-02 10:58</td><td data-sort="4096">      4k</td></tr>
 <tr><td data-sort="driverlogo.zip"><a href="driverlogo.zip"><img class="icon" src="../../../_autoindex/assets/icons/file.svg" alt="[CMP]">driverlogo.zip</a></td><td data-sort="1583146736">2020-03-02 10:58</td><td data-sort="65536">     64k</td></tr>
-<tr><td data-sort="driverlogo.png"><a href="driverlogo.png"><img class="icon" src="../../../_autoindex/assets/icons/image.svg" alt="[IMG]">driverlogo.png</a></td><td data-sort="1583146736">2020-03-02 10:58</td><td data-sort="4096">      4k</td></tr>
+<tr><td data-sort="driver"><a href="driver"><img class="icon" src="../../../_autoindex/assets/icons/image.svg" alt="[IMG]">driver</a></td><td data-sort="1583146736">2020-03-02 10:58</td><td data-sort="4096">      4k</td></tr>
 <tr><td data-sort="driver23.png"><a href="driver23.png"><img class="icon" src="../../../_autoindex/assets/icons/image.svg" alt="[IMG]">driver23.png</a></td><td data-sort="1581400190">2020-02-11 05:49</td><td data-sort="8192">      8k</td></tr>
 <tr><td data-sort="driver.png"><a href="driver.png"><img class="icon" src="../../../_autoindex/assets/icons/image.svg" alt="[IMG]">driver.png</a></td><td data-sort="1583188584">2020-03-02 22:36</td><td data-sort="118784">    116k</td></tr>
 </table></div>
